# Discord-Bots

./: README.md
py_bot_zomboid/: .env.example  pyproject.toml
py_bot_zomboid/py_bot_zomboid/: character_creator.py  character_formatter.py  main.py
py_bot_zomboid/py_bot_zomboid/json/: proj_zomb_character.json
